package banquemisr.challenge05.core

object TestTag {
    const val NOW_PLAYING_MOVIES: String = "NOW_PLAYING_MOVIES"
    const val POPULAR_MOVIES: String = "POPULAR_MOVIES"
    const val UPCOMING_MOVIES: String = "UPCOMING_MOVIES"

    const val BACK_ICON = "BACK_ICON"
    const val DETAILS_LIST: String = "DetailsList"
    const val DETAILS_MOVIES_GENRES: String = "DetailsMovieGenres"
    const val DETAILS_IMAGE: String = "DetailsMovieImage"
}